--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <html>
+    <head>
+        <style>
+            .color1{
+                background-color: beige;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-size: large;
+            }
+
+            .color2{
+                background-color: blueviolet;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: medium;
+            }
+        </style>
+    </head>
+
     <body>
-        <h1>Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
+        <div class="color1">
+            <title> Solah menuntut HTML, nak tengok skill katanya</title>
+        </div>
+        <div class=".color2">
+            <h1>Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
+        </div>
     </body>
+
 </html>
