--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <body>
         <div class="color1">
-            <title> Solah menuntut HTML, nak tengok skill katanya</title>
+            <title><h1>Solah menuntut HTML, nak tengok skill katanya</h1></title>
         </div>
         <div class=".color2">
-            <h1>Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
+            Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
         </div>
     </body>
 
