--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <body>
         <div class="color1">
-            <title><h1>Solah menuntut HTML, nak tengok skill katanya</h1></title>
+            <title><h1>Cuba Saja</h1></title>
         </div>
         <div class=".color2">
+            Solah menuntut HTML, nak tengok skill katanya
             Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
         </div>
     </body>
