--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Cuba Saja</h1>
         </div>
         <div class="color2">
-            Solah menuntut HTML, nak tengok skill katanya
+            Solah menuntut HTML, nak tengok skill katanya <br>
             Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
         </div>
     </body>
