--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <style>
+
+            body{
+                background-color: lightblue;
+            }
             .color1{
                 background-color: beige;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -15,7 +19,7 @@
         </style>
     </head>
 
-    <body>
+    <body class="body">
         <div class="color1">
             <h1>Cuba Saja</h1>
         </div>
