--- a/index.html
+++ b/index.html
@@ -1,32 +1,116 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <style>
+<head>
+  <title>Your Name - Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
 
-            body{
-                background-color: lightblue;
-            }
-            .color1{
-                background-color: beige;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                font-size: large;
-            }
+    header {
+      background-color: #0074D9;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
 
-            .color2{
-                background-color: blueviolet;
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: medium;
-            }
-        </style>
-    </head>
+    h1 {
+      margin: 0;
+      font-size: 36px;
+    }
 
-    <body class="body">
-        <div class="color1">
-            <h1>Cuba Saja</h1>
-        </div>
-        <div class="color2">
-            Solah menuntut HTML, nak tengok skill katanya <br>
-            Hai, my name is haikal, i am 23 yrs old and broken and not available</h1>
-        </div>
-    </body>
+    h2 {
+      margin-top: 20px;
+      font-size: 28px;
+    }
 
+    .section {
+      padding: 20px;
+    }
+
+    .section-title {
+      border-bottom: 2px solid #0074D9;
+      font-size: 24px;
+      margin: 0;
+      padding-bottom: 5px;
+    }
+
+    .info {
+      font-size: 18px;
+    }
+
+    .experience-item {
+      margin-bottom: 15px;
+    }
+
+    .experience-item h3 {
+      margin: 0;
+    }
+
+    .experience-item .date {
+      font-size: 14px;
+    }
+
+    .education-item {
+      margin-bottom: 15px;
+    }
+
+    .education-item h3 {
+      margin: 0;
+    }
+
+    .education-item .date {
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Your Name</h1>
+    <p>Web Developer</p>
+  </header>
+
+  <div class="section">
+    <h2 class="section-title">Contact Information</h2>
+    <p class="info">Email: your.email@example.com</p>
+    <p class="info">Phone: (123) 456-7890</p>
+    <p class="info">Website: www.example.com</p>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Summary</h2>
+    <p>
+      A motivated web developer with a passion for building user-friendly and responsive websites. Experienced in HTML, CSS, JavaScript, and various front-end frameworks.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Experience</h2>
+    <div class="experience-item">
+      <h3>Front-end Developer, ABC Company</h3>
+      <p class="date">Jan 2020 - Present</p>
+      <p>
+        - Developed and maintained the company's website using HTML, CSS, and JavaScript.<br>
+        - Collaborated with the design team to implement user interfaces for new features.<br>
+        - Optimized website performance and ensured cross-browser compatibility.
+      </p>
+    </div>
+
+    <!-- Add more experience items if needed -->
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Education</h2>
+    <div class="education-item">
+      <h3>Bachelor of Science in Computer Science, XYZ University</h3>
+      <p class="date">2016 - 2020</p>
+    </div>
+
+    <!-- Add more education items if needed -->
+  </div>
+
+</body>
 </html>
