--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Name - Resume</title>
+  <title>AHMAD HAIKAL BIN ESMARIZAM</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,35 +69,53 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Web Developer</p>
+    <h1>AHMAD HAIKAL BIN ESMARIZAM</h1>
+    <p>Sales & Customer Support</p>
   </header>
 
   <div class="section">
     <h2 class="section-title">Contact Information</h2>
-    <p class="info">Email: your.email@example.com</p>
-    <p class="info">Phone: (123) 456-7890</p>
-    <p class="info">Website: www.example.com</p>
+    <p class="info">Email: ahmadhaikal0360@gmail.com</p>
+    <p class="info">Phone: +60197341685</p>
+    <p class="info">Website: https://haikal036.github.io/</p>
   </div>
 
   <div class="section">
     <h2 class="section-title">Summary</h2>
     <p>
-      A motivated web developer with a passion for building user-friendly and responsive websites. Experienced in HTML, CSS, JavaScript, and various front-end frameworks.
+      Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.
     </p>
   </div>
 
   <div class="section">
     <h2 class="section-title">Experience</h2>
     <div class="experience-item">
-      <h3>Front-end Developer, ABC Company</h3>
-      <p class="date">Jan 2020 - Present</p>
+      <h3>Shoppegram Sdn Bhd</h3>
+      <p class="date">Nov 31 - May 21</p>
       <p>
-        - Developed and maintained the company's website using HTML, CSS, and JavaScript.<br>
-        - Collaborated with the design team to implement user interfaces for new features.<br>
-        - Optimized website performance and ensured cross-browser compatibility.
+        • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
+        • Troubleshoot customer bugs or technical problems. <br>
+        • Update platform documentation. <br>
+        • Features testing and troubleshooting with the development team. <br>
+        • Help the marketing team with custom store development or theme customization. <br>
+        • Follow any instructions given by the supervisor or management.
       </p>
     </div>
+
+    <div class="section">
+        <h2 class="section-title">Experience</h2>
+        <div class="experience-item">
+          <h3>Shoppegram Sdn Bhd</h3>
+          <p class="date">May 22 - Present</p>
+          <p>
+            - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
+            - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
+            - Offering specialized assistance and information specifically related to workshops. <br>
+            - Managing the platform for customer support and ensuring prompt and accurate responses. <br>
+            - Creating automations support as needed for incoming Workshop or any related activities. <br>
+            - Focusing on workshop-related queries and providing excellent customer service.
+          </p>
+        </div>
 
     <!-- Add more experience items if needed -->
   </div>
@@ -105,8 +123,8 @@
   <div class="section">
     <h2 class="section-title">Education</h2>
     <div class="education-item">
-      <h3>Bachelor of Science in Computer Science, XYZ University</h3>
-      <p class="date">2016 - 2020</p>
+      <h3>Diploma of Science in Computer Science, University Teknologi Mara</h3>
+      <p class="date">2018 - 2021</p>
     </div>
 
     <!-- Add more education items if needed -->
