--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h2 class="section-title">Experience</h2>
     <div class="experience-item">
       <h3>Shoppegram Sdn Bhd</h3>
-      <p class="date">May 22 - Present</p>
+      <p class="date">May 22 - Present (MARKETING)</p>
         <p>
         - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
         - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
@@ -101,7 +101,7 @@
         - Focusing on workshop-related queries and providing excellent customer service.
         </p>
 
-      <p class="date">Nov 31 - May 21</p>
+      <p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p>
       <p>
         • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
         • Troubleshoot customer bugs or technical problems. <br>
