--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2 class="section-title">Contact Information</h2>
     <p class="info">Email: ahmadhaikal0360@gmail.com</p>
     <p class="info">Phone: +60197341685</p>
-    <p class="info">Website: <a href=https://haikal036.github.io target="_blank">https://haikal036.github.io/</p>
+    <p class="info">Website: <a href=https://haikal036.github.io target="_blank">https://haikal036.github.io/ </a></p>
   </div>
 
   <div class="section">
