--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
     .education-item .date {
       font-size: 14px;
     }
+
+    /* Navigation Bar Styles */
+    nav {
+      background-color: #333;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 20px;
+      font-size: 18px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -73,22 +91,30 @@
     <p>Sales & Customer Support</p>
   </header>
 
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="#contact">Contact</a>
+    <a href="#summary">Summary</a>
+    <a href="#experience">Experience</a>
+    <a href="#education">Education</a>
+  </nav>
+
   <div class="section">
-    <h2 class="section-title">Contact Information</h2>
+    <h2 class="section-title" id="contact">Contact Information</h2>
     <p class="info">Email: ahmadhaikal0360@gmail.com</p>
     <p class="info">Phone: +60197341685</p>
     <p class="info">Website: <a href=https://haikal036.github.io target="_blank">https://haikal036.github.io/ </a></p>
   </div>
 
   <div class="section">
-    <h2 class="section-title">Summary</h2>
+    <h2 class="section-title" id="summary">Summary</h2>
     <p>
       Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.
     </p>
   </div>
 
   <div class="section">
-    <h2 class="section-title">Experience</h2>
+    <h2 class="section-title" id="experience">Experience</h2>
     <div class="experience-item">
       <h3>Shoppegram Sdn Bhd</h3>
       <p class="date">May 22 - Present (MARKETING)</p>
@@ -116,7 +142,7 @@
   </div>
 
   <div class="section">
-    <h2 class="section-title">Education</h2>
+    <h2 class="section-title" id="education">Education</h2>
     <div class="education-item">
       <h3>Diploma of Science in Computer Science, University Teknologi Mara</h3>
       <p class="date">2018 - 2021</p>
