--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     .section {
       padding: 20px;
+      text-align: center;
     }
 
     .section-title {
@@ -36,14 +37,17 @@
       font-size: 24px;
       margin: 0;
       padding-bottom: 5px;
+      text-align: center;
     }
 
     .info {
       font-size: 18px;
+      text-align: center;
     }
 
     .experience-item {
       margin-bottom: 15px;
+      text-align: center;
     }
 
     .experience-item h3 {
