--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h2 class="section-title" id="experience">Experience</h2>
     <div class="experience-item">
       <h3>Shoppegram Sdn Bhd</h3>
-      <h3><p class="date">May 22 - Present (MARKETING)</p>
+      <h3><p class="date">May 22 - Present (MARKETING)</p></h3>
         <p>
         - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
         - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
