--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
     }
 
     .experience-item {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; /* Align children to the left side */
       margin-bottom: 15px;
-      text-align: center;
+    }
+
+    .experience-item.right-date {
+      align-items: flex-end; /* Align children to the right side */
     }
 
     .experience-item h3 {
@@ -119,7 +125,7 @@
 
   <div class="section">
     <h2 class="section-title" id="experience">Experience</h2>
-    <div class="experience-item">
+    <div class="experience-item right-date">
       <h3>Shoppegram Sdn Bhd</h3>
       <h3><p class="date">May 22 - Present (MARKETING)</p></h3>
         <p>
@@ -130,7 +136,7 @@
         - Creating automations support as needed for incoming Workshop or any related activities. <br>
         - Focusing on workshop-related queries and providing excellent customer service.
         </p>
-
+      <div class="experience-item">
       <h3><p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p></h3>
       <p>
         • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
@@ -140,6 +146,7 @@
         • Help the marketing team with custom store development or theme customization. <br>
         • Follow any instructions given by the supervisor or management.
       </p>
+      </div>
     </div>
 
     <!-- Add more experience items if needed -->
