--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         - Creating automations support as needed for incoming Workshop or any related activities. <br>
         - Focusing on workshop-related queries and providing excellent customer service.
         </p>
+      </div>
+      
       <div class="experience-item right-date">
       <h3><p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p></h3>
       <p>
