--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <h2 class="section-title" id="contact">Contact Information</h2>
     <p class="info">Email: ahmadhaikal0360@gmail.com</p>
     <p class="info">Phone: +60197341685</p>
-    <p class="info">Website: <a href=https://haikal036.github.io target="_blank">https://haikal036.github.io/ </a></p>
+    <p class="info">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
   </div>
 
   <div class="section">
@@ -136,7 +136,7 @@
         - Focusing on workshop-related queries and providing excellent customer service.
         </p>
       </div>
-      
+
       <div class="experience-item right-date">
       <h3><p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p></h3>
       <p>
