deleted bio code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       font-size: 24px;
       margin: 0;
       padding-bottom: 5px;
-      
     }
 
     .info {
@@ -65,6 +64,7 @@
 
     .education-item {
       margin-bottom: 15px;
+      text-align: center;
     }
 
     .education-item h3 {
