updated summary features

--- a/index.html
+++ b/index.html
@@ -60,10 +60,19 @@
   </div>
 
   <div class="card-body">
-    <h2 class="col" id="summary">Summary</h2>
-      <p>
-        Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.
-      </p>
+    <h2 class="col">Summary</h2>
+    <p>
+      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#mysummary" aria-expanded="false" aria-controls="collapseExample">
+        Read My Summary
+      </button>
+    </p>
+
+      <div class="collapse" id="mysummary">
+        <div class="card card-body">
+          Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.<br>
+          Incomplete.
+        </div>
+      </div>
   </div>
 
   <div class="card-body">
