--- a/index_copy.html
+++ b/index_copy.html
@@ -75,29 +75,50 @@
   </div>-->
 
   <div class="card-body">
-    <h2 class="col" id="summary">Summary</h2>
-      <p>
-        Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.
-      </p>
+    <h2 class="col">Summary</h2>
+    <p>
+      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#mysummary" aria-expanded="false" aria-controls="collapseExample">
+        Read My Summary
+      </button>
+    </p>
+
+      <div class="collapse" id="mysummary">
+        <div class="card card-body">
+          Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.<br>
+          Incomplete.
+        </div>
+      </div>
   </div>
 
   <div class="card-body">
     <h2 class="col" id="experience">Experience</h2>
       <div class="experience-item">
         <h3>Shoppegram Sdn Bhd</h3>
-        <h3><p class="date">May 22 - Present (MARKETING)</p></h3>
-          <p>
-          - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
-          - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
-          - Offering specialized assistance and information specifically related to workshops. <br>
-          - Managing the platform for customer support and ensuring prompt and accurate responses. <br>
-          - Creating automations support as needed for incoming Workshop or any related activities. <br>
-          - Focusing on workshop-related queries and providing excellent customer service.
-          </p>
+          <h5><p class="date">February 1,2024 - Present (Customer Support)</p></h5>
+            <p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            </p>
       </div>
 
-      <div class="experience-item right-date">
-        <h3><p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p></h3>
+      <div class="experience-item">
+        <h3>Shoppegram Sdn Bhd</h3>
+          <h5><p class="date">May 22,2023 - February 1,2024 (Sales & Customer Support)</p></h5>
+            <p>
+            - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
+            - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
+            - Offering specialized assistance and information specifically related to workshops. <br>
+            - Managing the platform for customer support and ensuring prompt and accurate responses. <br>
+            - Creating automations support as needed for incoming Workshop or any related activities. <br>
+            - Focusing on workshop-related queries and providing excellent customer service.
+            </p>
+      </div>
+
+      <div class="experience-item">
+        <h5><p class="date">October 31, 2022 - May 21,2023 (Technical Support)</p></h5>
           <p>
             • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
             • Troubleshoot customer bugs or technical problems. <br>
@@ -107,13 +128,13 @@
             • Follow any instructions given by the supervisor or management.
           </p>
       </div>
-    </div>
+  </div>
 
     <!-- Add more experience items if needed -->
   <div class="card-body">
     <h2 class="col" id="education">Education</h2>
       <div class="education-item">
-        <h3>Diploma of Science in Computer Science, University Teknologi Mara</h3>
+        <h5>Diploma of Science in Computer Science, University Teknologi Mara</h5>
           <p class="date">2018 - 2021</p>
             <!-- Add more education items if needed -->
       </div>
