--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                           <a class="dropdown-item" href="#">Money</a>
                           <a class="dropdown-item" href="#">Learn</a>
-                          <a class="dropdown-item" href="#">Missing Link</a>
+                          <a class="dropdown-item disabled" href="#">Missing Link</a>
                       </div>
               </li>
           </ul>
