--- a/index.html
+++ b/index.html
@@ -17,40 +17,40 @@
       </div>
     </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-      <!-- Navigation Bar -->
-      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact</a>
-              </li>
-
-              <li class="nav-item">
-                  <a class="nav-link" href="#summary">Summary</a>
-              </li>
-
-              <li class="nav-item">
-                  <a class="nav-link" href="#experience">Experience</a>
-              </li>
-
-              <li class="nav-item">
-                  <a class="nav-link" href="#education">Education</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="#">Money</a>
-                          <a class="dropdown-item" href="#">Learn</a>
-                          <a class="dropdown-item disabled" href="#">Missing Link</a>
-                      </div>
-              </li>
-          </ul>
-      </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+        <!-- Navigation Bar -->
+        <div class="justify-content-center navbar-collapse collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+  
+                <li class="nav-item">
+                    <a class="nav-link" href="#summary">Summary</a>
+                </li>
+  
+                <li class="nav-item">
+                    <a class="nav-link" href="#experience">Experience</a>
+                </li>
+  
+                <li class="nav-item">
+                    <a class="nav-link" href="#education">Education</a>
+                </li>
+  
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Money</a>
+                            <a class="dropdown-item" href="#">Learn</a>
+                            <a class="dropdown-item disabled" href="#">Missing Link</a>
+                        </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
   <div class="card-body">
     <h2 class="col" id="contact">Contact Information</h2>
