--- a/index.html
+++ b/index.html
@@ -79,19 +79,31 @@
     <h2 class="col" id="experience">Experience</h2>
       <div class="experience-item">
         <h3>Shoppegram Sdn Bhd</h3>
-        <h3><p class="date">May 22 - Present (MARKETING)</p></h3>
-          <p>
-          - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
-          - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
-          - Offering specialized assistance and information specifically related to workshops. <br>
-          - Managing the platform for customer support and ensuring prompt and accurate responses. <br>
-          - Creating automations support as needed for incoming Workshop or any related activities. <br>
-          - Focusing on workshop-related queries and providing excellent customer service.
-          </p>
+          <h5><p class="date">February 1,2024 - Present (Customer Support)</p></h5>
+            <p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            </p>
       </div>
 
-      <div class="experience-item right-date">
-        <h3><p class="date">Nov 31 - May 21 (TECHNICAL SUPPORT)</p></h3>
+      <div class="experience-item">
+        <h3>Shoppegram Sdn Bhd</h3>
+          <h5><p class="date">May 22,2023 - February 1,2024 (Sales & Customer Support)</p></h5>
+            <p>
+            - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
+            - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
+            - Offering specialized assistance and information specifically related to workshops. <br>
+            - Managing the platform for customer support and ensuring prompt and accurate responses. <br>
+            - Creating automations support as needed for incoming Workshop or any related activities. <br>
+            - Focusing on workshop-related queries and providing excellent customer service.
+            </p>
+      </div>
+
+      <div class="experience-item">
+        <h5><p class="date">October 31, 2022 - May 21,2023 (Technical Support)</p></h5>
           <p>
             • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
             • Troubleshoot customer bugs or technical problems. <br>
@@ -101,7 +113,7 @@
             • Follow any instructions given by the supervisor or management.
           </p>
       </div>
-    </div>
+  </div>
 
     <!-- Add more experience items if needed -->
   <div class="card-body">
