--- a/index.html
+++ b/index.html
@@ -61,17 +61,30 @@
 
   <div class="card-body">
     <h2 class="col">Summary</h2>
-    <p>
-      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#mysummary" aria-expanded="false" aria-controls="collapseExample">
-        Read My Summary
-      </button>
-    </p>
+      <p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#mysummary" aria-expanded="false" aria-controls="collapseExample">
+          Read My Summary
+        </button>
+      </p>
 
       <div class="collapse" id="mysummary">
-        <div class="card card-body">
-          Sales and Customer Support of Terangi Academy. Majorly handling automation of the Workshop consisting of Order, Reminder, Follow up and Adhoc tasks.<br>
-          Incomplete.
-        </div>
+          <div class="card card-body">
+              <p>
+                Experienced and adaptable professional striving for continuous improvement in every role. With a solid background in sales, customer service, and technical assistance, I am committed to enhancing my skills and delivering exceptional performance.
+              </p>
+  
+              <p>
+                During my tenure at Shoppegram Sdn Bhd from May 2023 to February 2024, I served as a Sales & Customer Support specialist, where I effectively managed marketing inquiries, facilitated product activations, and provided specialized assistance to customers interested in workshops and recorded sessions. Additionally, I ensured prompt and accurate responses to customer inquiries and implemented automation solutions to streamline workshop-related activities.
+              </p>
+              
+              <p>
+                In my previous role as a Technical Support specialist from October 2022 to May 2023, I demonstrated strong problem-solving skills in addressing customer inquiries across various channels. I collaborated closely with the development team to resolve technical issues promptly and contributed to platform documentation updates and features testing. Additionally, I supported marketing initiatives by assisting with custom store development and theme customization.
+              </p>
+              
+              <p>
+                As a dedicated team player, I am committed to continuous growth and learning to enhance my contributions to the success of any organization I work with.
+              </p>
+          </div>
       </div>
   </div>
 
