--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" href="https://haikal036.github.io/money/html/calculate.html">Okay, please proceed</button>
+                        <a href="https://haikal036.github.io/money/html/calculate.html" class="btn btn-primary">Okay, please proceed</a>
                     </div>
                 </div>
             </div>
@@ -93,13 +93,6 @@
             </div>
         </div>
     </div>
-  <!-- Navigation Bar -->
-  <!--<nav>
-    <a href="#contact">Contact</a>
-    <a href="#summary">Summary</a>
-    <a href="#experience">Experience</a>
-    <a href="#education">Education</a>
-  </nav>-->
 
     <div class="card-body">
         <h2 class="col" id="contact">Contact Information</h2>
@@ -107,13 +100,6 @@
             <p class="col">Phone: +60197341685</p>
             <p class="col">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
     </div>
-
-  <!--<div class="section">
-    <h2 class="section-title" id="contact">Contact Information</h2>
-    <p class="info">Email: ahmadhaikal0360@gmail.com</p>
-    <p class="info">Phone: +60197341685</p>
-    <p class="info">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
-  </div>-->
 
     <div class="card-body">
         <h2 class="col">Summary</h2>
