--- a/main.html
+++ b/main.html
@@ -73,8 +73,7 @@
             </div>
         </div>
 
-         <!-- Modal -->
-         <div class="modal fade" id="learn" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="learn" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -94,13 +93,15 @@
         </div>
     </div>
 
+    <!-- This code is for Contact Information-->
     <div class="card-body">
         <h2 class="col" id="contact">Contact Information</h2>
             <p class="col">Email: ahmadhaikal0360@gmail.com</p>
             <p class="col">Phone: +60197341685</p>
-            <p class="col">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
+            <p class="col">LinkedIn: <a href=https://www.linkedin.com/in/ahmadhaikal03/ target="_blank">linkedin</a></p>
     </div>
 
+    <!-- This code is for summary-->
     <div class="card-body">
         <h2 class="col">Summary</h2>
             <p>
@@ -130,8 +131,9 @@
         </div>
   </div>
 
+    <!-- This code is for Experiences-->
     <div class="card-body">
-        <h2 class="col" id="experience">Experience</h2>
+        <h2 class="col" id="experience">Experiences</h2>
             <div class="experience-item">
                 <h3>Shoppegram Sdn Bhd</h3>
                     <h5><p class="date">February 1,2024 - Present (Customer Support)</p></h5>
