--- a/main.html
+++ b/main.html
@@ -73,7 +73,8 @@
             </div>
         </div>
 
-        <div class="modal fade" id="learn" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+         <!-- Modal -->
+         <div class="modal fade" id="learn" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -92,16 +93,28 @@
             </div>
         </div>
     </div>
+  <!-- Navigation Bar -->
+  <!--<nav>
+    <a href="#contact">Contact</a>
+    <a href="#summary">Summary</a>
+    <a href="#experience">Experience</a>
+    <a href="#education">Education</a>
+  </nav>-->
 
-    <!-- This code is for Contact Information-->
     <div class="card-body">
         <h2 class="col" id="contact">Contact Information</h2>
             <p class="col">Email: ahmadhaikal0360@gmail.com</p>
             <p class="col">Phone: +60197341685</p>
-            <p class="col">LinkedIn: <a href=https://www.linkedin.com/in/ahmadhaikal03/ target="_blank">linkedin</a></p>
+            <p class="col">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
     </div>
 
-    <!-- This code is for summary-->
+  <!--<div class="section">
+    <h2 class="section-title" id="contact">Contact Information</h2>
+    <p class="info">Email: ahmadhaikal0360@gmail.com</p>
+    <p class="info">Phone: +60197341685</p>
+    <p class="info">Website: <a href=https://www.linkedin.com/feed/ target="_blank">linkedin</a></p>
+  </div>-->
+
     <div class="card-body">
         <h2 class="col">Summary</h2>
             <p>
@@ -131,12 +144,11 @@
         </div>
   </div>
 
-    <!-- This code is for Experiences-->
     <div class="card-body">
-        <h2 class="col" id="experience">Experiences</h2>
+        <h2 class="col" id="experience">Experience</h2>
             <div class="experience-item">
                 <h3>Shoppegram Sdn Bhd</h3>
-                    <h5><p class="date">February 1,2024 - Present (Customer Support)</p></h5>
+                    <h5><p class="date">February 1,2024 - Present (Dept : Marketing - Customer Support)</p></h5>
                 <p>
                     <br>
                     <br>
@@ -147,7 +159,7 @@
             </div>
 
         <div class="experience-item">
-            <h5><p class="date">May 22,2023 - February 1,2024 (Sales & Customer Support)</p></h5>
+            <h5><p class="date">May 22,2023 - February 1,2024 (Dept : Marketing - Sales & Customer Support)</p></h5>
                 <p>
                 - Responding to marketing queries regarding plans, packages, and activation subscriptions. <br>
                 - Providing customer support and addressing inquiries related to workshops and upselling recorded sessions. <br>
@@ -159,7 +171,7 @@
         </div>
 
         <div class="experience-item">
-            <h5><p class="date">October 31, 2022 - May 21,2023 (Technical Support)</p></h5>
+            <h5><p class="date">October 31, 2022 - May 21,2023 (Dept : Development - Technical Support)</p></h5>
             <p>
                 • Reply customer enquiry via multiple channels such as: - Email - Live chat - Facebook, etc (social media) <br>
                 • Troubleshoot customer bugs or technical problems. <br>
